Show the parent menu items on mobile. Fixes #75

--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -1,1 +1,4 @@
 /* Menu Styles */
+#wpadminbar {
+	position: fixed;
+}
